# asmjson

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
asm/x86_64/: parse_json_zmm_dom.S  parse_json_zmm_dyn.S  parse_json_zmm_dyn.s  parse_json_zmm_tape.S
benches/: parse.rs
doc/: conversation.md
doc/paper/: JOSS_checklist.md
examples/: dom_example.rs  mmap_parallel.rs  perf_zmm_tape.rs  sax_example.rs  serde_example.rs
src/: classify_zmm.s  de.rs  json_ref.rs  lib.rs  sax.rs  tape.rs  value.rs
src/dom/: json_ref.rs  mod.rs
