[package]
name = "asmjson"
version = "0.1.0"
edition = "2024"
description = "A fast JSON parser using AVX-512/AVX2/SWAR classifiers"
license = "MIT"
repository = "https://github.com/andy-thomason/asmjson"
keywords = ["json", "parser", "simd", "avx512", "fast"]
categories = ["parsing", "encoding"]

[features]
stats = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
simd-json = { version = "0.17", default-features = false }

[[bench]]
name = "parse"
harness = false

[profile.bench]
debug = 1                  # line tables — enough for perf symbols without bloat
