[package]
name = "asmjson"
version = "0.1.2"
edition = "2024"
description = "A fast JSON parser using AVX-512/AVX2/SWAR classifiers"
authors = ["Amy Thomason"]
license = "MIT"
repository = "https://github.com/andy-thomason/asmjson"
readme = "README.md"
keywords = ["json", "parser", "simd", "avx512", "fast"]
categories = ["parsing", "encoding"]

[features]
stats = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
simd-json = { version = "0.17", default-features = false }
serde_json = "1"

[[bench]]
name = "parse"
harness = false

[profile.bench]
debug = 1                  # line tables — enough for perf symbols without bloat
