[package]
name = "asmjson"
version = "0.1.8"
edition = "2024"
description = "A fast JSON parser using AVX-512/AVX2/SWAR classifiers"
authors = ["Amy Thomason"]
license = "MIT"
repository = "https://github.com/andy-thomason/asmjson"
readme = "README.md"
keywords = ["json", "parser", "simd", "avx512", "fast"]
categories = ["parsing", "encoding"]

[features]
stats = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
simd-json = { version = "0.17", default-features = false }
serde_json = "1"
sonic-rs = "0.5.7"

[[example]]
name = "serde_example"
required-features = ["serde"]

[[bench]]
name = "parse"
harness = false

[profile.bench]
debug = 1                  # line tables — enough for perf symbols without bloat
